fix single project overflow

--- a/src/pages/single-project/single-project.css
+++ b/src/pages/single-project/single-project.css
@@ -1,3 +1,7 @@
+.single-project{
+    overflow-x: hidden;
+}
+
 .single-traveler{
     background-image: url("../../../public/assets/traveler-bg.jpg");
 }
